# GPU_black-hole_ray_tracing

./: README.md  christoffel_jax_verif_sympy.ipynb  diffrax_blackhole-Copy1.ipynb  jax_blackhole-diffrax_sanity_check.ipynb  jax_blackhole.ipynb  jax_christoffel.ipynb  jax_ein.py  kerr_christoffel.ipynb  kerr_metric_code_generator_sage_math.ipynb
CPU/: Makefile  black_hole.h  main.cpp
CPU_bench/: Makefile  cuda_ray.h  imagemaker_double.py  main  main.cpp  szinsaver.cpp  szinsaver.h
CUDA/: cuda_ray.cuh  kernel.cu  szinsaver.h
CUDA/No_fonts_version/: Makefile  cuda_ray.cuh  imagemaker.py  kernel.cu
CUDA_bench/: Makefile  cuda_ray.cuh  kernel.cu
CUDA_cli/: CMakeLists.txt  Makefile  Makefile_clang  Readme  black_hole.cuh  cache_warmer.py  cache_warmer2.py  cache_warmer3.py  cached_website.py  cli_imagemaker.py  cli_parser.cpp  cli_parser.h  cli_wrapper_server.py  cuda_ray.cuh  kernel.cu  main  meson.build  pixi.toml  run_website.sh  szinsaver.cpp  website_main.py
CUDA_cli/cache/: cache.db
CUDA_cli/cache/cach_backup/: cache.db
OpenACC/: Makefile  cuda_ray.h  imagemaker.py  imagemaker_double.py  main.cpp
